# weak-function

./: README.md
cmake/: CMakeLists.txt
cmake/modules/: unity-build.cmake
cmake/products/core/: CMakeLists.txt
cmake/products/examples/: CMakeLists.txt
cmake/products/package/: CMakeLists.txt
cmake/products/tests/: CMakeLists.txt
examples/: message_handler.cpp
include/wfl/: fwd.hpp  shared_function.hpp  weak_function.hpp
include/wfl/detail/: debug.hpp  function_allocator.hpp  function_allocator_storage.hpp  shared_function.hpp  thread_safe_function_allocator.hpp  weak_function.hpp
include/wfl/mt/: fwd.hpp  shared_function.hpp  weak_function.hpp
src/wfl/: shared_function.cpp  weak_function.cpp
src/wfl/detail/: function_allocator.cpp  function_allocator_storage.cpp  thread_safe_function_allocator.cpp
tests/src/: multi_thread.cpp  shared_function.cpp  weak_function.cpp
